# sidewalk-guardian

./: .gitignore  311_Service_Requests_from_2010_to_Present_20250621.csv  README.md  clean_requirements.txt  cluster.py  download.py  find_clusters.py  find_top_clusters.py  inference.py  map1.html  pyproject.toml  requirements.txt  use_webcam.py  visualize_reports.py
