[project]
name = "sidewalk-guardian"
version = "0.1.0"
description = ""
authors = [
    {name = "Jefrey Bulla",email = "jef@jefreybulla.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mapillary (>=1.0.13,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false